# ku_turtlebot

./: .gitignore  build.bash  node_list.md  readme.md  run.bash  run_me.bash  tb.bash  tb_build.bash
data/: test.mkv
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/main_package/share/main_package/: _launch.py  package.bash  package.ps1  package.sh  package.xml
log/: latest_build
src/main_package/: package.xml  setup.cfg  setup.py
src/main_package/launch/: ._launch.py.swp  _launch.py
src/main_package/main_package/: .demo_sub.py.swp  .webcam.py.swp  demo_pub.py  demo_sub.py  image_detection.py  lidar.py  lidar_test.py  sonar.py  traffic_sign_detection.py  webcam.py  webcam_stream.py  webcam_test.py  wheels.py  wheels_test.py
src/main_package/main_package/log/: latest_build
src/my_robot_interfaces/: CMakeLists.txt  package.xml
src/turtlebot3/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
src/turtlebot3/install/turtlebot3_description/share/turtlebot3_description/: package.bash
traffic-sign/: ReadMe.odt  TestV2.csv  TestV24.csv  TrainV2.csv  TrainV24.csv  launch.json  predict.py  road-sign-recognition.py  signNamesFullData.csv  signnames.csv  trafficsSignTest.py  trafficsignnet.py  train.py
traffic-sign/output/trafficssignnet.model/: saved_model.pb
traffic-sign/output/trafficssignnet.model/variables/: variables.data-00000-of-00001  variables.index
traffic-sign/outputFullData/trafficsignnetFullData.model/: saved_model.pb
traffic-sign/outputFullData/trafficsignnetFullData.model/variables/: variables.data-00000-of-00001  variables.index
